Move find/create user into user model for social login. User createSalt to create token in token model. Bug in use of hash object, restrict fields picked up on save, add social login. Authenticate access to / and /template. Rewrite hash functions to be synchronous. Add horizontal rule to sign up page.

--- a/app/views/signup.jade
+++ b/app/views/signup.jade
@@ -48,9 +48,9 @@ html(lang='en')
 								.form-group.col-xs-12.col-sm-6
 									label(for="confirm").control-label Confirm Password:
 									input.form-control(id='confirm', name='confirm', placeholder='Confirm Password', type='password').input-lg
-							br
-							button.btn.btn-lg.btn-primary.btn-block(type='submit').input-lg
-								| Sign up	
+							hr
+							button.btn.btn-lg.btn-primary.btn-block(type='submit')
+								| Sign up
 		//
 		// ================================================== 
 		// Placed at the end of the document so the pages load faster 
