Verify social login
Make appConfig available through app.get.
Add config.url.home
Clean up success redirects
Show provider on social login in navbar
Show read-only profile on social login

--- a/app/views/navbar.jade
+++ b/app/views/navbar.jade
@@ -13,7 +13,10 @@ nav.navbar.navbar-default.navbar-fixed-top.navbar-inverse(role="navigation")
 					b.caret
 				ul.dropdown-menu
 					li
-						a(href="/profile") Edit Profile
+						if (!user.provider)
+							a(href="/profile") Edit Profile
+						if (user.provider
+							a(href="#") Provider: #{user.provider}
 					li
 						a(href="/logout") Logout
 			else
