Add new main page
Fix redirect bug in google login
Add main page
Add provider listing in nav bar instead of edit profile
Move index to index2

--- a/app/views/navbar.jade
+++ b/app/views/navbar.jade
@@ -15,7 +15,7 @@ nav.navbar.navbar-default.navbar-fixed-top.navbar-inverse(role="navigation")
 					li
 						if (!user.provider)
 							a(href="/profile") Edit Profile
-						if (user.provider
+						if (user.provider)
 							a(href="#") Provider: #{user.provider}
 					li
 						a(href="/logout") Logout
