--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,48 +1,33 @@
-extends layout
+doctype 5
+html(lang='en')
+	head
+		meta(charset='utf-8')
+		meta(name='viewport', content='width=device-width, initial-scale=1.0')
+		meta(name='description', content='')
+		meta(name='author', content='')
+		link(rel='shortcut icon', href='/ico/favicon.png')
+		title The Main Page
+		
+		// Bootstrap core CSS
+		link(href='/bootstrap/css/bootstrap.css', rel='stylesheet')
+		
+		// Custom styles for this template
+		link(href='/css/profile.css', rel='stylesheet')
 
+		script(src="/jquery/jquery.js")
+		script(src="/jquery/jquery.validate.js")
+		script(src="/bootstrap/js/bootstrap.min.js")
 
-
-mixin displayLink(templateName, isImplemented)
-    tr
-    -if (isImplemented) {
-        th
-            a(href='/template/#{templateName}')= templateName
-        th
-            a(href='http://twbs.github.io/bootstrap/examples/#{templateName}')= templateName
-    -}
-    - else {
-        th
-            | #{templateName}
-            b
-                | &nbsp;- not implemented yet
-        th
-            a(href='http://twbs.github.io/bootstrap/examples/#{templateName}')= templateName
-    -}
-
-
-block body
-
-    p.lead
-        | All bootstrap 3 templates have been converted into Jade templates; enjoy !
-
-    table.table.table-condensed
-        thead
-            tr
-                th Jade version
-                th HTML version
-        tbody
-            +displayLink('starter-template', true)
-            +displayLink('carousel', true)
-            +displayLink('grid', true)
-            +displayLink('jumbotron', true)
-            +displayLink('jumbotron-narrow', true)
-            +displayLink('justified-nav', true)
-            +displayLink('navbar', true)
-            +displayLink('navbar-fixed-top', true)
-            +displayLink('navbar-static-top', true)
-            +displayLink('non-responsive', true)
-            +displayLink('offcanvas', true)
-            +displayLink('signin', true)
-            +displayLink('sticky-footer', true)
-            +displayLink('sticky-footer-navbar', true)
-            +displayLink('theme', true)
+	body
+	include navbar
+	include jumbotron
+	+jumbotron("The Main Page")
+	.container
+		.row
+			.col-xs-12
+				.account-wall
+					.form-section
+						include flashboard
+					.form-section.alert-info
+						h2 Hi #{user.displayName}!, this is the main page where amazing things happen.
+			
