Dynamic models/routes
Load models and routes by filename instead of explicitly.
Update validation on user model.
Move bundleFlash into a util module and split out routes into files.
Wire in start of a username/password recovery page.
New recovery icon.

--- a/app/views/jumbotron.jade
+++ b/app/views/jumbotron.jade
@@ -6,7 +6,7 @@ mixin jumbotron(headerText, iconFile)
 			else
 				img(src="/img/PassBoot.png").left
 			h1 #{headerText}
-			p(id="tagline") Welcome, pardner, to this here Bootstrap, Jade, Express, Passport round up!
+			p(id="tagline") Welcome, pardner, to this here Bootstrap, Jade, Express, Node, Passport round up!
 	script.
 		$(document).ready(function () {
 			var taglineText = [ "Bootstrap", "Jade", "Express", "Node", "Passport" ];
