--- a/app/views/login.jade
+++ b/app/views/login.jade
@@ -37,7 +37,7 @@ html(lang="en")
 								label.checkbox.pull-left
 									input(type='checkbox', id='rememberme', name='rememberme', value='remember-me')
 									| Remember me
-							a.pull-right.need-help(href='#') Need help? 
+							a.pull-right.need-help(href='/recover') Need help? 
 							span.clearfix
 						a.text-center.new-account(href='/signup') Create an account 
 				.col-sm-6
