--- a/app/views/profile.jade
+++ b/app/views/profile.jade
@@ -52,7 +52,7 @@ html(lang='en')
 									input.form-control(id="displayName", name="displayName", placeholder="Display Name", type='text', value='#{user.displayName}').input-lg
 							.row
 								.form-group.col-xs-12.col-sm-4
-									label(for="password").control-label Password:
+									label(for="password").control-label Old Password:
 									input.form-control(id='password', name='password', placeholder='Password', type='password').input-lg
 								.form-group.col-xs-12.col-sm-4
 									label(for="newpassword").control-label New Password:
