Fix error when old password in profile was incorrect. Add markdown support, link in README.md to the main page.

--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -28,6 +28,6 @@ html(lang='en')
 				.account-wall
 					.form-section
 						include flashboard
-					.form-section.alert-info
-						h2 Howdy #{user.displayName}, this here's the main street of this site. Mosey along, now.
+					.form-section
+						include ../../README.md
 			
